--- a/index.html
+++ b/index.html
@@ -3,45 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mobile Heart Slides</title>
+<title>Heart Animation Slides</title>
 <style>
-  * {margin: 0; padding: 0; box-sizing: border-box;}
-  body, html {height: 100%; width: 100%; overflow: hidden; font-family: sans-serif;}
-  
+  * {margin:0; padding:0; box-sizing:border-box;}
+  body, html {height:100%; width:100%; overflow:hidden; font-family:sans-serif;}
+
   .slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #ffc0cb; /* Light pink */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    flex-direction: column;
+    position:absolute;
+    width:100%;
+    height:100%;
+    background-color:#ffc0cb; /* Light pink */
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    overflow:hidden;
     transition: opacity 0.5s ease;
   }
-
-  .hidden {opacity: 0; pointer-events: none;}
+  .hidden {opacity:0; pointer-events:none;}
 
   .heart {
-    position: absolute;
-    width: 20px; height: 20px;
-    color: red;
-    font-size: 20px;
-    user-select: none;
-    pointer-events: none;
-    animation: float 5s linear infinite;
-  }
-
-  @keyframes float {
-    0% {transform: translate(0,0) scale(1);}
-    100% {transform: translate(var(--x), var(--y)) scale(1);}
+    position:absolute;
+    font-size:40px;
+    color:red;
+    user-select:none;
+    pointer-events:none;
   }
 
   .center-image {
-    width: 150px;
-    height: 150px;
-    object-fit: contain;
+    width:150px;
+    height:150px;
+    object-fit:contain;
+    display:none; /* hidden initially */
     animation: pop 0.8s ease forwards;
   }
 
@@ -51,20 +44,20 @@
   }
 
   .typewriter-text {
-    font-size: 18px;
-    color: #000;
-    width: 90%;
-    max-width: 400px;
-    margin-top: 20px;
+    font-size:18px;
+    color:#000;
+    width:90%;
+    max-width:400px;
+    margin-top:20px;
     overflow-wrap: break-word;
     white-space: pre-wrap;
   }
 
   .yours {
-    margin-top: 20px;
-    font-size: 20px;
-    color: #ff1493;
-    display: none;
+    margin-top:20px;
+    font-size:20px;
+    color:#ff1493;
+    display:none;
   }
 </style>
 </head>
@@ -72,12 +65,12 @@
 
 <!-- Slide 1 -->
 <div class="slide" id="slide1">
-  <img src="gift.png" class="center-image" alt="Inside Out 1">
+  <img src="gift.png" class="center-image" id="slide1-image" alt="Slide 1">
 </div>
 
 <!-- Slide 2 -->
 <div class="slide hidden" id="slide2">
-  <img src="letter.png" class="center-image" alt="Inside Out 2">
+  <img src="letter.png" class="center-image" id="slide2-image" alt="Slide 2">
 </div>
 
 <!-- Slide 3 -->
@@ -87,61 +80,39 @@
 </div>
 
 <script>
-const slides = document.querySelectorAll('.slide');
+const slides = [document.getElementById('slide1'), document.getElementById('slide2'), document.getElementById('slide3')];
 let currentSlide = 0;
 
-// Function to create hearts
-function createHearts(count) {
-  for(let i=0;i<count;i++){
+// Function to animate hearts from center to corners
+function animateHearts(slide, callback) {
+  const positions = [
+    {x: '-40vw', y: '-40vh'}, {x: '40vw', y: '-40vh'},
+    {x: '-40vw', y: '40vh'}, {x: '40vw', y: '40vh'},
+    {x: '0', y: '-45vh'}, {x: '0', y: '45vh'},
+    {x: '-45vw', y: '0'}, {x: '45vw', y: '0'},
+  ];
+
+  positions.forEach((pos, i)=>{
     const heart = document.createElement('div');
-    heart.className = 'heart';
-    heart.textContent = '❤️';
-    const x = (Math.random()*200 - 100) + 'px';
-    const y = (Math.random()*200 - 100) + 'px';
-    heart.style.setProperty('--x', x);
-    heart.style.setProperty('--y', y);
-    heart.style.left = '50%';
-    heart.style.top = '50%';
-    document.body.appendChild(heart);
-  }
+    heart.className='heart';
+    heart.textContent='❤️';
+    heart.style.left='50%';
+    heart.style.top='50%';
+    heart.style.transition='all 1s ease';
+    slide.appendChild(heart);
+
+    setTimeout(()=>{
+      heart.style.transform=`translate(${pos.x}, ${pos.y}) scale(1)`;
+    }, i*150);
+  });
+
+  setTimeout(()=>{
+    if(callback) callback();
+  }, positions.length*150 + 1000);
 }
 
-// Start with big hearts in center
-function popHearts() {
-  for(let i=0;i<20;i++){
-    const heart = document.createElement('div');
-    heart.className = 'heart';
-    heart.textContent = '❤️';
-    heart.style.fontSize = '40px';
-    heart.style.left = '50%';
-    heart.style.top = '50%';
-    const x = (Math.random()*window.innerWidth - window.innerWidth/2)+'px';
-    const y = (Math.random()*window.innerHeight - window.innerHeight/2)+'px';
-    heart.style.setProperty('--x', x);
-    heart.style.setProperty('--y', y);
-    document.body.appendChild(heart);
-  }
-}
-
-// Slide transition
-function nextSlide() {
-  slides[currentSlide].classList.add('hidden');
-  currentSlide++;
-  if(currentSlide < slides.length){
-    slides[currentSlide].classList.remove('hidden');
-
-    // Slide 3 special: typewriter and moving hearts
-    if(currentSlide === 2){
-      createHearts(30);
-      typeWriter("Hey! This is a special message typed out just for you. Enjoy the hearts all around while you read this!");
-    } else {
-      popHearts();
-    }
-  }
-}
-
-// Typewriter effect
-function typeWriter(text){
+// Typewriter effect for Slide 3
+function typeWriter(Kya likhu yrr🥹 i love youuuuuu alot yr 🥹 terko bta ne skti ye baat kyunki i know Tu merse pyr ne krta aur agr bta diya to friendship tut skti hai 🫠 to isliye nhi he btaungi kbhi. Tu itna acha h na yr , mera maan krta h bs terko he dekhti rhu like seriously agr Tu mere samne betha ho pure din k liye to m pure din terko he dekhti rhu🥹. Merko ne frk pdta ki tere ache dino me mai tere sath hu ya ne pr yr jab bhi thoda bhi kabhi low feel ho I'm always here for you 🫶 . M to chahti hu bs ki tu hmesha khush rhe , hamesha hste rhe❤. Tu bohot bohot important h yr mere liye. Pure din raat tere bare me he sochti rehti hu, kisi or k sath hoti hu tb b maan me tu he chla hota h🥹. Tere bina terko dekhe bina pta nhi kaise rhungi yr🥹🫠. Pehle mujhe lgta tha ki merko Tu bs vo as s friend type me he psnd h. M tere bare me sochti rehti thi hr time to m tb yhi sochti thi ki shyd hum roz baat krte h to bs attachment ho gyi hogi but ek din Maine terko dekha jb pta ne kyu pr mera terse nzre htane ka he maan ne krra tha🥹Or bs tbhi us din merko realise hogya ki nhi yr I genuinely love you🥹❤. Tu meri life me ho ya na ho yr lekin mere dil me hmesha rhega🥹Or es time feeling bohot real h sach me. Jaise i know ki tu merse pyaar ne krta but fir b m terse move on nhi krna chahti 🥹. M terko puri life time k liye pyaar krna chahti hu tere bare me he sochna chahti hu🥹🫶❤. Aj se kuch saal baad jb isko dekhu to khush hou ki haan yr jo bola tha vo aj bhi hai sb kuch❤. One sided love ki baat he kuch aur hoti h yr. Mai terko khush dekh k he khush ho jati hu 🌙. Pta he nhi chla yr kab mujhe terse itna pyaar hogya❤🥹. Or hua bhi aisa ki bs tu he hr trf dikhta h koi achi c pyaar wali reel aajaye to bs terko he imagine krti hu🩷. Itna pyara hai na yr tu🥹, bohot bohot bohot pyara lgta h mujhe tu🫠🫶. Soti hu to tere bare me soch k soti hu uth ti hu to pehla khyaal he tera atta h🫵🥹. Vo do din raat ko jo tere sath bitaye the I still remember those days🫠. Um.. Bohot ache din the vo🫶, tere sath bitaya hua hr din he acha tha pr vo do din were 'the best'❤. M chahti hu ki tu jb bhi kabhi apne liye koi partner choose krre , vo bhi terko bohot pyaar krre 🫶. Haan terko uske sath dekha to nhi jayega merse pr m selfish to nhi hu yr na he ban skti hu🥹, to bs tu jisko bhi pyaar krre vo terko hmesha khush rkhe tera khyaal rkhe ache se🫶. Tere liye mera pyaar jaisa abhi hai waisa he rhega hmesha , kabhi kum nhi hoga haan badh jrur skta h🫶. Meri hr ek pyaar wali story hr ek pyaar wala note tere liye he hota h. Kash Tu samjh skta ki kitna pyaar krti hu terse🥹. Terko to shyd pta b nhi hoga ki terko pyaar bhi krti hu 🥹🫶. Pr koi ni 🩷. Mera maan krta h bs tera hath pkd k tere sath ghumnti rhu, khin ek jagah beth k terko dekhti rhu🥹, m to yr hr din tere sath spend krna chahti hu pr I know ye to possible he nhi h❤️‍🩹🥹. Terko bohot jor se hug krne ka maan krta h yr🥹🥹🥹pr bol ne skti🫠. Kash yr tu bhi merko es way me dekhta jis way me mai dekhti hu🫠. Pr kya kr skte hai na yr 🥺. Bohot kuch hai mere pass to terko bolne ko pr abhi k liye itna he bohot hai. Pr ye jitna bhi hai meri feelings ka 30% hoga🥹 baki ka 70% fir kabhi bolungi🥹🫶. Bs yr I LOVE YOUUUUUUUUUUUUU🥹🥹❤❤🫠🫠🫶🫶){
   const el = document.getElementById('typewriter');
   let i=0;
   const interval = setInterval(()=>{
@@ -150,22 +121,74 @@ function typeWriter(text){
       i++;
     } else {
       clearInterval(interval);
-      document.querySelector('.yours').style.display = 'block';
+      document.querySelector('.yours').style.display='block';
       stopHearts();
     }
   },50);
 }
 
-// Stop hearts animation after typewriter
-function stopHearts(){
-  document.querySelectorAll('.heart').forEach(h=>h.style.animationPlayState='paused');
+// Function to create moving hearts for Slide 3
+function createMovingHearts(count){
+  for(let i=0;i<count;i++){
+    const heart = document.createElement('div');
+    heart.className='heart';
+    heart.textContent='❤️';
+    heart.style.left=Math.random()*100+'vw';
+    heart.style.top=Math.random()*100+'vh';
+    heart.style.transition='all 0.1s linear';
+    document.getElementById('slide3').appendChild(heart);
+
+    let angle=Math.random()*2*Math.PI;
+    let speed=1+Math.random()*2;
+    const moveHeart = ()=>{
+      let x=parseFloat(heart.style.left);
+      let y=parseFloat(heart.style.top);
+      x+=Math.cos(angle)*speed;
+      y+=Math.sin(angle)*speed;
+      if(x<0) x=0; if(x>100) x=100;
+      if(y<0) y=0; if(y>100) y=100;
+      heart.style.left=x+'vw';
+      heart.style.top=y+'vh';
+      heart.anim=requestAnimationFrame(moveHeart);
+    };
+    moveHeart();
+  }
 }
 
-// Tap anywhere to go next slide
-document.body.addEventListener('click', nextSlide);
+// Stop hearts on Slide 3 after typewriter
+function stopHearts(){
+  document.querySelectorAll('#slide3 .heart').forEach(h=>cancelAnimationFrame(h.anim));
+}
 
-// Initialize first slide
-popHearts();
+// Show next slide
+function nextSlide(){
+  slides[currentSlide].classList.add('hidden');
+  currentSlide++;
+  if(currentSlide<slides.length){
+    slides[currentSlide].classList.remove('hidden');
+
+    if(currentSlide===0){ // Slide 1
+      animateHearts(slides[0], ()=>{
+        document.getElementById('slide1-image').style.display='block';
+      });
+    } else if(currentSlide===1){ // Slide 2
+      animateHearts(slides[1], ()=>{
+        document.getElementById('slide2-image').style.display='block';
+      });
+    } else if(currentSlide===2){ // Slide 3
+      createMovingHearts(30);
+      typeWriter("Hey! This is your custom message. Hearts moving while the text types out. Enjoy! 💖");
+    }
+  }
+}
+
+// Initial Slide 1 animation
+animateHearts(slides[0], ()=>{
+  document.getElementById('slide1-image').style.display='block';
+});
+
+// Tap to next slide
+document.body.addEventListener('click', nextSlide);
 
 </script>
 
