--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 <title>Heart Slides</title>
 <style>
   * {margin:0; padding:0; box-sizing:border-box;}
-  html, body {width:100%; height:100%; overflow:hidden; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+  html, body {width:100%; height:100%; overflow:hidden; font-family:sans-serif;}
   
   .slide {
     position:absolute;
     width:100%; height:100%;
-    background-color:#ffc0cb;
     display:flex; justify-content:center; align-items:center;
     flex-direction:column;
     overflow:hidden;
@@ -19,12 +18,13 @@
   }
   .hidden {opacity:0; pointer-events:none;}
 
-  .heart {
+  /* Background hearts for slide1 and slide2 */
+  .bg-heart {
     position:absolute;
-    font-size:40px;
+    font-size:10px;
+    color:red;
     user-select:none;
     pointer-events:none;
-    transition: all 0.1s linear;
   }
 
   .center-image {
@@ -39,17 +39,6 @@
     100% {transform: scale(1);}
   }
 
-  .typewriter-text {
-    font-size:22px; 
-    font-weight:bold;
-    color:#000;
-    width:90%; max-width:500px; 
-    margin-top:20px;
-    overflow-wrap: break-word; 
-    white-space: pre-wrap;
-    text-align:left;
-  }
-
   .slide3-content {
     width:100%; height:100%;
     overflow-y:auto;
@@ -58,26 +47,47 @@
     padding:20px;
   }
 
+  .typewriter-text {
+    font-size:22px; /* bigger text */
+    font-weight:bold; /* bold */
+    font-family: 'Georgia', serif; /* prettier font */
+    color:#000;
+    width:90%; max-width:600px;
+    margin-top:20px;
+    overflow-wrap: break-word; white-space: pre-wrap;
+    text-align:left;
+  }
+
   .yours {
-    margin-top:20px; font-size:22px;
-    font-weight:bold; color:#ff1493; display:none;
+    margin-top:20px;
+    font-size:24px;
+    font-weight:bold;
+    color:#ff1493; display:none;
+  }
+
+  .heart {
+    position:absolute;
+    font-size:35px;
+    user-select:none;
+    pointer-events:none;
+    transition: all 0.1s linear;
   }
 </style>
 </head>
 <body>
 
 <!-- Slide 1 -->
-<div class="slide" id="slide1">
+<div class="slide" id="slide1" style="background-color:#ffc0cb;">
   <img src="gift.png" class="center-image" id="slide1-image">
 </div>
 
 <!-- Slide 2 -->
-<div class="slide hidden" id="slide2">
+<div class="slide hidden" id="slide2" style="background-color:#ffc0cb;">
   <img src="letter.png" class="center-image" id="slide2-image">
 </div>
 
 <!-- Slide 3 -->
-<div class="slide hidden" id="slide3">
+<div class="slide hidden" id="slide3" style="background-color:#fff0f5;">
   <div class="slide3-content">
     <div class="typewriter-text" id="typewriter"></div>
     <div class="yours">-YOURS SAMRIDHI💗</div>
@@ -88,59 +98,33 @@
 const slides = [document.getElementById('slide1'), document.getElementById('slide2'), document.getElementById('slide3')];
 let currentSlide = 0;
 
-// Generate random heart color
-function randomHeartColor() {
-  return Math.random() < 0.5 ? 'red' : 'white';
-}
-
-// Slide 1 & 2: hearts animation + image pop
-function animateHearts(slide, imageId, callback){
-  const positions = [
-    {x:'-50vw',y:'-50vh'},{x:'50vw',y:'-50vh'},
-    {x:'-50vw',y:'50vh'},{x:'50vw',y:'50vh'},
-    {x:'0',y:'-50vh'},{x:'0',y:'50vh'},
-    {x:'-50vw',y:'0'},{x:'50vw',y:'0'}
-  ];
-  positions.forEach((pos,i)=>{
+// Function to create background hearts (small red hearts)
+function createBackgroundHearts(slide, count){
+  for(let i=0;i<count;i++){
     const h=document.createElement('div');
-    h.className='heart'; 
+    h.className='bg-heart';
     h.textContent='❤️';
-    h.style.color=randomHeartColor();
-    h.style.left='50%'; h.style.top='50%';
+    h.style.left=Math.random()*100+'vw';
+    h.style.top=Math.random()*100+'vh';
     slide.appendChild(h);
-    setTimeout(()=>{ h.style.transform=`translate(${pos.x},${pos.y})`; }, i*150);
-  });
-  setTimeout(()=>{
-    document.getElementById(imageId).style.display='block';
-    if(callback) callback();
-  }, positions.length*150 + 800);
+  }
 }
 
-// Slide 3: typewriter + moving hearts
-function typeWriter(text){
-  const el=document.getElementById('typewriter');
-  let i=0;
-  const interval=setInterval(()=>{
-    if(i<text.length){
-      el.textContent+=text[i];
-      i++;
-      el.parentElement.scrollTop = el.parentElement.scrollHeight; // auto scroll
-    }else{
-      clearInterval(interval);
-      document.querySelector('.yours').style.display='block';
-      stopHearts();
-    }
-  },50);
+// Show central image after small delay
+function showImage(imageId){
+  document.getElementById(imageId).style.display='block';
 }
 
+// Slide 3 hearts animation (red + white)
 let heartIntervals=[];
 function createMovingHearts(count){
   const slide3=document.getElementById('slide3');
+  const colors=['red','white'];
   for(let i=0;i<count;i++){
     const h=document.createElement('div');
-    h.className='heart'; 
+    h.className='heart';
     h.textContent='❤️';
-    h.style.color=randomHeartColor();
+    h.style.color = colors[Math.floor(Math.random()*2)];
     h.style.left=Math.random()*100+'vw';
     h.style.top=Math.random()*100+'vh';
     h.style.fontSize=(20+Math.random()*30)+'px';
@@ -148,7 +132,7 @@ function createMovingHearts(count){
     slide3.appendChild(h);
 
     let angle=Math.random()*2*Math.PI;
-    let speed=0.2 + Math.random()*0.3; 
+    let speed=0.2 + Math.random()*0.3;
     const interval=setInterval(()=>{
       let x=parseFloat(h.style.left);
       let y=parseFloat(h.style.top);
@@ -160,13 +144,31 @@ function createMovingHearts(count){
       y=Math.max(0, Math.min(100, y));
       h.style.left=x+'vw';
       h.style.top=y+'vh';
-    },40); 
+    },40);
     heartIntervals.push(interval);
   }
 }
+
 function stopHearts(){
   heartIntervals.forEach(i=>clearInterval(i));
-  heartIntervals = [];
+  heartIntervals=[];
+}
+
+// Typewriter effect
+function typeWriter(text){
+  const el=document.getElementById('typewriter');
+  let i=0;
+  const interval=setInterval(()=>{
+    if(i<text.length){
+      el.textContent+=text[i];
+      i++;
+      el.parentElement.scrollTop = el.parentElement.scrollHeight;
+    }else{
+      clearInterval(interval);
+      document.querySelector('.yours').style.display='block';
+      stopHearts();
+    }
+  },50);
 }
 
 // Next slide logic
@@ -176,19 +178,28 @@ function nextSlide(){
   if(currentSlide<slides.length){
     slides[currentSlide].classList.remove('hidden');
 
-    if(currentSlide===0) animateHearts(slides[0],'slide1-image');
-    if(currentSlide===1) animateHearts(slides[1],'slide2-image');
+    if(currentSlide===0){
+      createBackgroundHearts(slides[0],50); // small hearts background
+      setTimeout(()=>showImage('slide1-image'),500);
+    }
+
+    if(currentSlide===1){
+      createBackgroundHearts(slides[1],50);
+      setTimeout(()=>showImage('slide2-image'),500);
+    }
+
     if(currentSlide===2){
-      createMovingHearts(50); 
-      typeWriter("Kya likhu yrr🥹 i love youuuuuu alot yr 🥹 terko bta ne skti ye baat kyunki i know Tu merse pyr ne krta aur agr bta diya to friendship tut skti hai 🫠 to isliye nhi he btaungi kbhi. Tu itna acha h na yr , mera maan krta h bs terko he dekhti rhu like seriously agr Tu mere samne betha ho pure din k liye to m pure din terko he dekhti rhu🥹. Merko ne frk pdta ki tere ache dino me mai tere sath hu ya ne pr yr jab bhi thoda bhi kabhi low feel ho I'm always here for you 🫶 . M to chahti hu bs ki tu hmesha khush rhe , hamesha hste rhe❤. Tu bohot bohot important h yr mere liye. Pure din raat tere bare me he sochti rehti hu, kisi or k sath hoti hu tb b maan me tu he chla hota h🥹. Tere bina terko dekhe bina pta nhi kaise rhungi yr🥹🫠. Pehle mujhe lgta tha ki merko Tu bs vo as s friend type me he psnd h. M tere bare me sochti rehti thi hr time to m tb yhi sochti thi ki shyd hum roz baat krte h to bs attachment ho gyi hogi but ek din Maine terko dekha jb pta ne kyu pr mera terse nzre htane ka he maan ne krra tha🥹Or bs tbhi us din merko realise hogya ki nhi yr I genuinely love you🥹❤. Tu meri life me ho ya na ho yr lekin mere dil me hmesha rhega🥹Or es time feeling bohot real h sach me. Jaise i know ki tu merse pyaar ne krta but fir b m terse move on nhi krna chahti 🥹. M terko puri life time k liye pyaar krna chahti hu tere bare me he sochna chahti hu🥹🫶❤. Aj se kuch saal baad jb isko dekhu to khush hou ki haan yr jo bola tha vo aj bhi hai sb kuch❤. One sided love ki baat he kuch aur hoti h yr. Mai terko khush dekh k he khush ho jati hu 🌙. Pta he nhi chla yr kab mujhe terse itna pyaar hogya❤🥹. Or hua bhi aisa ki bs tu he hr trf dikhta h koi achi c pyaar wali reel aajaye to bs terko he imagine krti hu🩷. Itna pyara hai na yr tu🥹, bohot bohot bohot pyara lgta h mujhe tu🫠🫶. Soti hu to tere bare me soch k soti hu uth ti hu to pehla khyaal he tera atta h🫵🥹. Vo do din raat ko jo tere sath bitaye the I still remember those days🫠. Um.. Bohot ache din the vo🫶, tere sath bitaya hua hr din he acha tha pr vo do din were 'the best'❤. M chahti hu ki tu jb bhi kabhi apne liye koi partner choose krre , vo bhi terko bohot pyaar krre 🫶. Haan terko uske sath dekha to nhi jayega merse pr m selfish to nhi hu yr na he ban skti hu🥹, to bs tu jisko bhi pyaar krre vo terko hmesha khush rkhe tera khyaal rkhe ache se🫶. Tere liye mera pyaar jaisa abhi hai waisa he rhega hmesha , kabhi kum nhi hoga haan badh jrur skta h🫶. Meri hr ek pyaar wali story hr ek pyaar wala note tere liye he hota h. Kash Tu samjh skta ki kitna pyaar krti hu terse🥹. Terko to shyd pta b nhi hoga ki terko pyaar bhi krti hu 🥹🫶. Pr koi ni 🩷. Mera maan krta h bs tera hath pkd k tere sath ghumnti rhu, khin ek jagah beth k terko dekhti rhu🥹, m to yr hr din tere sath spend krna chahti hu pr I know ye to possible he nhi h❤️‍🩹🥹. Terko bohot jor se hug krne ka maan krta h yr🥹🥹🥹pr bol ne skti🫠. Kash yr tu bhi merko es way me dekhta jis way me mai dekhti hu🫠. Pr kya kr skte hai na yr 🥺. Bohot kuch hai mere pass to terko bolne ko pr abhi k liye itna he bohot hai. Pr ye jitna bhi hai meri feelings ka 30% hoga🥹 baki ka 70% fir kabhi bolungi🥹🫶. Bs yr I LOVE YOUUUUUUUUUUUUU🥹🥹❤❤🫠🫠🫶🫶"); 
+      createMovingHearts(50); // red + white
+      typeWriter("Kya likhu yrr🥹 i love youuuuuu alot yr 🥹 terko bta ne skti ye baat kyunki i know Tu merse pyr ne krta aur agr bta diya to friendship tut skti hai 🫠 to isliye nhi he btaungi kbhi. Tu itna acha h na yr , mera maan krta h bs terko he dekhti rhu like seriously agr Tu mere samne betha ho pure din k liye to m pure din terko he dekhti rhu🥹. Merko ne frk pdta ki tere ache dino me mai tere sath hu ya ne pr yr jab bhi thoda bhi kabhi low feel ho I'm always here for you 🫶 . M to chahti hu bs ki tu hmesha khush rhe , hamesha hste rhe❤. Tu bohot bohot important h yr mere liye. Pure din raat tere bare me he sochti rehti hu, kisi or k sath hoti hu tb b maan me tu he chla hota h🥹. Tere bina terko dekhe bina pta nhi kaise rhungi yr🥹🫠. Pehle mujhe lgta tha ki merko Tu bs vo as s friend type me he psnd h. M tere bare me sochti rehti thi hr time to m tb yhi sochti thi ki shyd hum roz baat krte h to bs attachment ho gyi hogi but ek din Maine terko dekha jb pta ne kyu pr mera terse nzre htane ka he maan ne krra tha🥹Or bs tbhi us din merko realise hogya ki nhi yr I genuinely love you🥹❤. Tu meri life me ho ya na ho yr lekin mere dil me hmesha rhega🥹Or es time feeling bohot real h sach me. Jaise i know ki tu merse pyaar ne krta but fir b m terse move on nhi krna chahti 🥹. M terko puri life time k liye pyaar krna chahti hu tere bare me he sochna chahti hu🥹🫶❤. Aj se kuch saal baad jb isko dekhu to khush hou ki haan yr jo bola tha vo aj bhi hai sb kuch❤. One sided love ki baat he kuch aur hoti h yr. Mai terko khush dekh k he khush ho jati hu 🌙. Pta he nhi chla yr kab mujhe terse itna pyaar hogya❤🥹. Or hua bhi aisa ki bs tu he hr trf dikhta h koi achi c pyaar wali reel aajaye to bs terko he imagine krti hu🩷. Itna pyara hai na yr tu🥹, bohot bohot bohot pyara lgta h mujhe tu🫠🫶. Soti hu to tere bare me soch k soti hu uth ti hu to pehla khyaal he tera atta h🫵🥹. Vo do din raat ko jo tere sath bitaye the I still remember those days🫠. Um.. Bohot ache din the vo🫶, tere sath bitaya hua hr din he acha tha pr vo do din were 'the best'❤. M chahti hu ki tu jb bhi kabhi apne liye koi partner choose krre , vo bhi terko bohot pyaar krre 🫶. Haan terko uske sath dekha to nhi jayega merse pr m selfish to nhi hu yr na he ban skti hu🥹, to bs tu jisko bhi pyaar krre vo terko hmesha khush rkhe tera khyaal rkhe ache se🫶. Tere liye mera pyaar jaisa abhi hai waisa he rhega hmesha , kabhi kum nhi hoga haan badh jrur skta h🫶. Meri hr ek pyaar wali story hr ek pyaar wala note tere liye he hota h. Kash Tu samjh skta ki kitna pyaar krti hu terse🥹. Terko to shyd pta b nhi hoga ki terko pyaar bhi krti hu 🥹🫶. Pr koi ni 🩷. Mera maan krta h bs tera hath pkd k tere sath ghumnti rhu, khin ek jagah beth k terko dekhti rhu🥹, m to yr hr din tere sath spend krna chahti hu pr I know ye to possible he nhi h❤️‍🩹🥹. Terko bohot jor se hug krne ka maan krta h yr🥹🥹🥹pr bol ne skti🫠. Kash yr tu bhi merko es way me dekhta jis way me mai dekhti hu🫠. Pr kya kr skte hai na yr 🥺. Bohot kuch hai mere pass to terko bolne ko pr abhi k liye itna he bohot hai. Pr ye jitna bhi hai meri feelings ka 30% hoga🥹 baki ka 70% fir kabhi bolungi🥹🫶. Bs yr I LOVE YOUUUUUUUUUUUUU🥹🥹❤❤🫠🫠🫶🫶"); // your full message here
     }
   }
 }
 
-// Start Slide 1 animation
-animateHearts(slides[0],'slide1-image');
+// Start first slide
+createBackgroundHearts(slides[0],50);
+showImage('slide1-image');
 
-// Tap anywhere to go next slide
+// Tap to go next slide
 document.body.addEventListener('click', nextSlide);
 </script>
 
